--- a/styles/style.css
+++ b/styles/style.css
@@ -117,16 +117,21 @@ body{
     font-weight: 400;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1200px) {
     
     .header{
          padding: 10%;  
     }
     .header__menu{
         justify-content: center;
+        padding: 5%;
     }
     .presentacion{
         flex-direction: column-reverse;
+    }
+
+    .presentacion__contenido{
+        width: auto;
     }
     
 }
